[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/QuestionnaireConfiguration/Items/SubOptions/ItemOptionsNumeric.gd" type="Script" id=1]

[node name="ItemOptionsNumeric" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 109.0
margin_bottom = 19.0
text = "Number of Digits"

[node name="DigitsSpinBox" type="SpinBox" parent="."]
margin_left = 113.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="."]
margin_top = 33.0
margin_right = 109.0
margin_bottom = 47.0
text = "Minimum Value"

[node name="MinValueSpinBox" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="."]
margin_top = 61.0
margin_right = 109.0
margin_bottom = 75.0
text = "Maximum Value"

[node name="MaxValueSpinBox" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 3

[connection signal="value_changed" from="DigitsSpinBox" to="." method="_on_DigitsSpinBox_value_changed"]
[connection signal="value_changed" from="MinValueSpinBox" to="." method="_on_MinValueSpinBox_value_changed"]
[connection signal="value_changed" from="MaxValueSpinBox" to="." method="_on_MaxValueSpinBox_value_changed"]
